Fix nav links to use relative paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -132,13 +132,12 @@
     </header>
 
     <nav>
-        <a href="file:///C:/Users/patpj/OneDrive%20-%20Prairie%20View%20A&M%20University/MU/AboutMU.html">About Us</a>
-        <a href="file:///C:/Users/patpj/OneDrive%20-%20Prairie%20View%20A&M%20University/MU/MUstudy.html">Student Study</a>
-        <a href="file:///C:/Users/patpj/OneDrive%20-%20Prairie%20View%20A&M%20University/MU/MUevents.html">Campus Events</a>
-        <a href="file:///C:/Users/patpj/OneDrive%20-%20Prairie%20View%20A&M%20University/MU/studentclubshome-1.html">Student Clubs</a> 
-        <a href="file:///C:/Users/patpj/OneDrive%20-%20Prairie%20View%20A&M%20University/MU/Greek%20Life.html">Greek Life</a>
-        <a href="file:///C:/Users/patpj/OneDrive%20-%20Prairie%20View%20A&M%20University/MU/MuContact.html">Contact</a>
-        <a href="file:///C:/Users/patpj/OneDrive%20-%20Prairie%20View%20A&M%20University/MU/MUAthletics.html">Athletics</a>
+      <a href="AboutMU.html">About Us</a>
+      <a href="MUstudy.html">Student Study</a>
+      <a href="MUevents.html">Campus Events</a>
+      <a href="studentclubshome-1.html">Student Clubs</a>
+      <a href="greek-life.html">Greek Life</a>
+      <a href="MuContact.html">Contact</a>
     </nav>
 
     <section class="hero">
@@ -194,4 +193,3 @@
 
 </body>
 </html>
-
