Fix navigation links and improve HTML structure
Updated navigation links and corrected HTML structure.

--- a/Greek Life.html
+++ b/Greek Life.html
@@ -9,15 +9,15 @@
 <!--header-->
 <div class="header">
 <!--navigational content-->
-<a href="Css Personal.html"><img src="monsters_logo_small.png"></a>
+<a href="Css Personal.html"><img src="monsters_logo_small.png" alt="logo"></a>
 <nav>
-<a href="Css Personal.html" class="headerNav">Home</a>
-<a href="AboutUs.html" class="headerNav">About Us</a>
-<a href="MUstudy.html" class="headerNav"> Study Resources</a>
-<a href="muclubs.html" class="headerNav">Campus Events</a>
-<a href="MUStudent Clubs.html" class="headerNav">Student Clubs</a>
-<a href="MUContact.html" class="headerNav">Contacts</a>
-<center><Monstersuni.html class="headerNav"> Athletics</a></center>
+  <a href="Css Personal.html" class="headerNav">Home</a>
+  <a href="AboutMU.html" class="headerNav">About Us</a>
+  <a href="MUstudy.html" class="headerNav">Study Resources</a>
+  <a href="muclubs.html" class="headerNav">Campus Events</a>
+  <a href="MUStudent Clubs.html" class="headerNav">Student Clubs</a>
+  <a href="MUContact.html" class="headerNav">Contacts</a>
+  <a href="MUAthletics.html" class="headerNav">Athletics</a>
 </nav>
 </div>
 
