--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     </header>
 
     <nav>
-      <a href="AboutMU.html">About Us</a>
-      <a href="MUstudy.html">Student Study</a>
-      <a href="MUevents.html">Campus Events</a>
-      <a href="studentclubshome-1.html">Student Clubs</a>
-      <a href="Greek Life.html">Greek Life</a>
-      <a href="MuContact.html">Contact</a>
-      <a href="MUAthletics.html">Athletics</a>
+      <a href="AboutMU.html">About Us Camryn</a>
+      <a href="MUstudy.html">Student Study Jordan</a>
+      <a href="MUevents.html">Campus EventsJessica</a>
+      <a href="studentclubshome-1.html">Student Clubs Rae</a>
+      <a href="Greek Life.html">Greek Life Joshua</a>
+      <a href="MuContact.html">Contact Patrick</a>
+      <a href="MUAthletics.html">Athletics Xavier</a>
     </nav>
 
     <section class="hero">
